--- a/SequenceAnalise/SequenceAnalise.csproj
+++ b/SequenceAnalise/SequenceAnalise.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Accord.Math" Version="3.8.0" />
+    <PackageReference Include="Clipper2" Version="1.2.3" />
     <PackageReference Include="MathNet.Numerics" Version="5.0.0" />
   </ItemGroup>
 
